<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainMenuContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/tool_bar_base"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:id="@+id/quickStartButton"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/layer_background_support"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    app:srcCompat="@drawable/ic_flash_on_black_24dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/quickstart"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/startExerciseButton"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:background="@drawable/layer_background_support"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    app:srcCompat="@drawable/ic_playlist_play_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/start_routine"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="56dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <LinearLayout
                    android:id="@+id/logsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/layer_background_support"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="4"
                        android:alpha="0.5"
                        app:srcCompat="@drawable/ic_date_range_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/logs"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/exercisesList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/layer_background_support"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="4"
                        android:alpha="0.5"
                        app:srcCompat="@drawable/ic_fitness_center_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/exercises"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/viewProgramsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/layer_background_support"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="4"
                        android:alpha="0.5"
                        app:srcCompat="@drawable/ic_view_list_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/menu_createprogram"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/supportDeveloper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layer_background_support"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="4"
                        android:alpha="0.5"
                        app:srcCompat="@drawable/ic_monetization_on_black_24dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/support_developer"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:layout_marginBottom="8dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>